# mGame

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  LICENSE  README.md
game/: block.h  camera.h  chunk.cpp  chunk.h  cmake_config.h.in  font.cpp  font.h  inputEvents.cpp  inputEvents.h  mGame.cpp  shader.cpp  shader.h
game/headers/: chunk.h  image.h  param.h  util.h
game/include/: block.h  block.hpp  blocksHighlighter.hpp  camera.h  camera.hpp  chunk.hpp  configurations.hpp  debugLayout.hpp  font.h  font.hpp  gameSaver.hpp  gameWorld.hpp  guiLayout.hpp  inputEvents.h  inputEvents.hpp  interface.hpp  interfaceLayout.hpp  inventoryLayout.hpp  item.hpp  mainMachine.hpp  player.h  player.hpp  shader.h  shader.hpp  util.h  util.hpp
game/include/gui/: debugLayout.hpp  interfaceLayout.hpp  inventoryLayout.hpp
game/include/util/: cursor.hpp  font.hpp  image.hpp  param.hpp  shader.hpp  util.hpp  win_icons.hpp
game/shaders/: list.txt
game/shaders/cubeShader/: frag.glsl  geom.glsl  vert.glsl
game/shaders/flatTShader/: frag.glsl  vert.glsl
game/shaders/guiShader/: frag.glsl  vert.glsl
game/shaders/testShader/: fragment.glsl  vertex.glsl
game/shaders/wireShader/: frag.glsl  vert.glsl
game/src/: block.cpp  blocksHighlighter.cpp  chunk.cpp  debugLayout.cpp  font.cpp  gameSaver.cpp  gameWorld.cpp  guiLayout.cpp  image.cpp  inputEvents.cpp  interface.cpp  interfaceLayout.cpp  inventoryLayout.cpp  item.cpp  mGame.cpp  mainMachine.cpp  player.cpp  shader.cpp  util.cpp
game/src/gui/: debugLayout.cpp  interfaceLayout.cpp  (+1 more)
saves/dev1/: info.json  player.json
(+7 files in other folders)
